discussion/kv_engine/178800/178800_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43127: Log succcess status from dumpCallback

If we crash and fail to write a dump this should be logged. Our ability
to figure out what happened to the breakpad dump may be impacted
otherwise.

Change-Id: I35e40084fd82d3d5e0493501722462d8c830fdd3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-08-12 14:44:24.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-12 14:47:42.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48318/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48318/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9212/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9212/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20611/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20611/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19425/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:183:23: error: variable "succeeded" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
        WRITE_MSG(fd, succeeded ? "yes\n" : "no\n");
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:172:31: note: "succeeded" declared here
                         bool succeeded) {
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:173:20: note: lambda expression begins here
    auto writeFn = [&descriptor](int fd) {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:185:14: error: variable "succeeded" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
        if (!succeeded) {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:172:31: note: "succeeded" declared here
                         bool succeeded) {
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:173:20: note: lambda expression begins here
    auto writeFn = [&descriptor](int fd) {
                   ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19425/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:183:23:
error: variable "succeeded" cannot be implicitly captured in a lambda with no capture-default specified [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19425/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40591/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/utilities/breakpad.cc:183:23:
error: variable "succeeded" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40591/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9115/ : FAILURE

Compile error at [2022-08-12T14:45:31.194Z] ../kv_engine/utilities/breakpad.cc:183:23:
error: variable "succeeded" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9115/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21713/ : FAILURE

Compile error at [2022-08-12T14:45:18.215Z] ../kv_engine/utilities/breakpad.cc:183:23:
error: ?succeeded? is not captured
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21713/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21362/ : FAILURE

Compile error at [2022-08-12T14:45:37.890Z] ../kv_engine/utilities/breakpad.cc:183:23:
error: ?succeeded? is not captured
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21362/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22435/ : FAILURE

Compile error at [2022-08-12T14:45:33.281Z] ../kv_engine/utilities/breakpad.cc:183:23:
error: variable "succeeded" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22435/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29739/ : FAILURE

Compile error at [2022-08-12T14:46:14.171Z] ../kv_engine/utilities/breakpad.cc:183:23:
error: variable "succeeded" cannot be implicitly captured in a lambda with no capture-default specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29739/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18637/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
